Corrected z-index on footer

--- a/src/scss/components/_site-footer.scss
+++ b/src/scss/components/_site-footer.scss
@@ -9,6 +9,7 @@ footer {
   left: 0;
   right: 0;
   border-top: 1px grey solid;
+  z-index: 2;
 
   & .footer-copyright {
     max-height: 1.3rem;
